--- a/MiniTermProject_KMeans.ipynb
+++ b/MiniTermProject_KMeans.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -174,6 +175,7 @@
     }
    ],
    "source": [
+    "#import data and create data frame\n",
     "df = pd.read_csv(\"Supermarket_Customers_data_v2.csv\", delimiter=';')\n",
     "df"
    ]
