--- a/MiniTermProject_KMeans.ipynb
+++ b/MiniTermProject_KMeans.ipynb
@@ -577,6 +577,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clustering of all three Variables in an interactive manner"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
