--- a/MiniTermProject_KMeans.ipynb
+++ b/MiniTermProject_KMeans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import plotly.express as px\n",
     "import plotly.graph_objs as go\n",
     "from plotly import tools\n",
     "from plotly.subplots import make_subplots\n",
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -5798,7 +5799,8 @@
     "layout = go.Layout(margin=dict(l=0,r=0),scene = Scene,height = 700,width = 700)\n",
     "data = [trace]\n",
     "fig = go.Figure(data = data, layout = layout)\n",
-    "fig.show()"
+    "fig.show()\n",
+    "fig.write_html(\"/Users/karlheynen/Documents/University/Master/Courses/1. Semester/Business Information Systems/MTP/file.html\")"
    ]
   }
  ],
